# arduinolib2

./: CMakeLists.txt  library.json
arduinolib2_scripts/: arduinolib2_execute_scripts.py  arduinolib2_pre_build.py
arduinolib2_scripts/arduinolib2_core/: L1_check_component_macro.py  L1_check_rest_controller.py  L1_comment_interface_header.py  L1_find_class_header.py  L1_get_validator_name.py  L2_add_reverse_include.py  L2_get_base_url.py  L2_get_file_scope.py  L2_include_validator_header.py  L3_add_implementation_template.py  L3_add_instance_code.py  L3_get_endpoint_details.py  L4_generate_function_pointer.py  L4_process_autowired.py  L4_process_component.py  L5_generate_all_endpoints.py  L5_process_di.py  L6_cpp_di_preprocessor.py  L6_generate_code_for_all_sources.py  L7_cpp_spring_boot_preprocessor.py  add_header_include.py  arduinolib2_get_client_files.py  check_scope_macro.py  check_validate_macro.py  find_class_names.py  find_cpp_files.py  find_interface_names.py  get_client_files.py  get_current_file_path.py
scripts/: pre_build.py
springbootplusplus-web_scripts/: springbootplusplus-web_pre_build.py  springbootplusplus_web_execute_scripts.py  springbootplusplus_web_pre_build.py
springbootplusplus-web_scripts/springbootplusplus-web_core/: L1_check_component_macro.py  L1_find_class_header.py  L2_add_reverse_include.py  L2_get_base_url.py  L3_get_endpoint_details.py  L4_generate_function_pointer.py  L4_process_component.py  L5_generate_all_endpoints.py  L5_process_di.py  L6_cpp_di_preprocessor.py  L6_generate_code_for_all_sources.py  L7_cpp_spring_boot_preprocessor.py  add_header_include.py  check_scope_macro.py  find_interface_names.py
src/: EndpointTrie.h  HttpRequestDispatcher.h  HttpRequestManager.h  HttpRequestProcessor.h  HttpRequestQueue.h  HttpResponseProcessor.h  HttpResponseQueue.h  IHttpRequestDispatcher.h  IHttpRequestManager.h  IHttpRequestProcessor.h  IHttpRequestQueue.h  NayanMath2.h  ResponseEntityToHttpResponse.h
src/01-framework/06-event/04-dispatcher/: 01-EventDispatcher.h
